--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,9 @@
             <version>3.1.7</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
